--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -216,7 +216,7 @@
         </main>
         @@include('./../components/_footer.html')
     </div>
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 
 </html>
