--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -45,7 +45,7 @@
                                 для
                                 Вас способом.</p>
                         </div>
-                        <a href="#" class="about__btn btn-outline">Узнать подробнее</a>
+                        <a href="about.html" class="about__btn btn-outline">Узнать подробнее</a>
                     </div>
                     <div class="about__benefits">
                         <div class="about__benefit">
@@ -84,7 +84,7 @@
             <section class="mini-catalog">
                 <h3 class="mini-catalog__title container">Каталог</h3>
                 <ul class="mini-catalog__list container">
-                    <li><a class="mini-catalog__item" href="#">
+                    <li><a class="mini-catalog__item" href="category.html">
                             <h5>Удилища</h5>
                         </a></li>
                     <li><a class="mini-catalog__item" href="#">
@@ -122,7 +122,7 @@
                         </a></li>
                 </ul>
                 <div class="container">
-                    <a href="#" class="mini-catalog__btn btn" id="faq">Перейти к каталогу</a>
+                    <a class="mini-catalog__btn btn" href="catalog.html"  id="faq">Перейти к каталогу</a>
                 </div>
             </section>
             <section class="faq container">
@@ -187,7 +187,6 @@
                         </div>
                     </div>
                     <div class="line"></div>
-
                     <div class="faq-accordion__item">
                         <div class="faq-accordion__title">
                             <h4>Система скидок</h4><img class="faq-accordion__icon" src="images/icons/arrow-icon.svg"
