--- a/app/pages/subcategory.html
+++ b/app/pages/subcategory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('./../components/_head.html', {
-'title': 'Удилища'
+'title': 'Спиннинги'
 })
 
 <body>
