--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -13,6 +13,9 @@
                     туристического
                     <strong>снаряжения</strong>
                 </h1>
+                <div class="heading-mob__btn container">
+                    <a class="btn" href="catalog.html">Перейти к каталогу</a>
+                </div>
                 <div class="heading__substrate">
                     <div class="heading__wave">
                         <svg width="1440" height="210" viewBox="0 0 1440 210" fill="none"
@@ -40,7 +43,7 @@
                             <p>Оптовая компания <span>Магри</span> предоставляет обширный выбор<br>из товаров японских и
                                 европейских
                                 брендов, таких как : Lurefans, Garry Angler, Tiemco, Forest, Country Road, Valley hill,
-                                Trimm, Carson, Behr и Interfish.<br><br>У нас Вы можете приобрести все необходимое, а
+                                Trimm, Carson, Behr и Interfish.<br><br> У нас Вы можете приобрести все необходимое, а
                                 также получить профессиональную консультацию по снастям и туристическим товарам удобным
                                 для
                                 Вас способом.</p>
@@ -48,34 +51,28 @@
                         <a href="about.html" class="about__btn btn-outline">Узнать подробнее</a>
                     </div>
                     <div class="about__benefits">
-                        <div class="about__benefit">
-                            <div>
+                        <div class="about__benefit-wrapper">
+                            <div class="about__benefit about__benefit1">
                                 <h5>20 +</h5>
                                 <p>Лет на рынке</p>
                             </div>
-                        </div>
-                        <div class="about__benefit">
-                            <div>
-                                <h5>20 000 +</h5>
-                                <p>Наименований <br> товаров в каталоге</p>
-                            </div>
-                        </div>
-                        <div class="about__benefit">
-                            <div>
+                            <div class="about__benefit about__benefit2">
                                 <h5>Скидки</h5>
                                 <p>Удобная система <br> накопительных <br> и разовых скидок</p>
                             </div>
-                        </div>
-                        <div class="about__benefit">
-                            <div>
-                                <h5>Доставка по РФ</h5>
-                                <p>Доставим в любой регион РФ <br> удобной Вам транспортной <br> компанией</p>
-                            </div>
-                        </div>
-                        <div class="about__benefit">
-                            <div>
+                            <div class="about__benefit about__benefit3">
                                 <h5>Поддержка</h5>
                                 <p>Предоставим <br> профессиональную <br> консультацию по товарам</p>
+                            </div>
+                        </div>
+                        <div class="about__benefit-wrapper">
+                            <div class="about__benefit about__benefit4">
+                                <h5>20 000 +</h5>
+                                <p>Наименований <br> товаров в каталоге</p>
+                            </div>
+                            <div class="about__benefit about__benefit5">
+                                <h5>Доставка по РФ</h5>
+                                <p>Доставим в любой регион РФ <br> удобной Вам транспортной <br> компанией</p>
                             </div>
                         </div>
                     </div>
