--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1200">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
@@ -23,7 +23,8 @@
                 <li class="navbar__item"><a href="index.html#faq">FAQ</a></li>
                 <li class="navbar__item"><a href="#footer">Контакты</a></li>
             </ul>
-            <a href="index.html"><img class="navbar__logo" src="images/logo.avif" alt="logo"></a>
+            <a class="navbar__logo" href="index.html"><img src="images/logo.avif" alt="logo"></a>
+            <img class="navbar__burger-btn open-navbar-popup open-popup" src="images/icons/burger-menu-icon.svg" alt="">
             <div class="navbar__info">
                 <form>
                     <input class="navbar__input line-input" type="search" placeholder="Введите ключевое слово">
@@ -34,7 +35,7 @@
                                 fill="#1D1818" />
                         </svg>
                     </button>
-                </form>
+                </form> 
                 <a class="navbar__icon open-cart-popup">
                     <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path opacity="0.988" fill-rule="evenodd" clip-rule="evenodd"
@@ -58,6 +59,21 @@
                             fill="#1D1818" />
                     </svg>
                 </a>
+            </div>
+            <div class="navbar-popup popup">
+                <div class="navbar-popup__content popup__content">
+                    <div class="popup__header">
+                        <img class="close-navbar-popup close-popup" src="images/icons/close-icon.svg" alt="">
+                    </div>
+                    <ul class="navbar__list-mob">
+                        <li class="navbar__item close-navbar-popup"><a href="about.html">О компании</a></li>
+                        <li class="navbar__item close-navbar-popup"><a href="catalog.html">Каталог</a></li>
+                        <li class="navbar__item close-navbar-popup"><a href="index.html#faq">FAQ</a></li>
+                        <li class="navbar__item close-navbar-popup"><a href="#footer">Контакты</a></li>
+                        <div class="navbar__item-line"></div>
+                        <li class="navbar__item close-navbar-popup"><a href="#">Личный кабинет</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </div>
@@ -449,6 +465,9 @@
                     туристического
                     <strong>снаряжения</strong>
                 </h1>
+                <div class="heading-mob__btn container">
+                    <a class="btn" href="catalog.html">Перейти к каталогу</a>
+                </div>
                 <div class="heading__substrate">
                     <div class="heading__wave">
                         <svg width="1440" height="210" viewBox="0 0 1440 210" fill="none"
@@ -476,7 +495,7 @@
                             <p>Оптовая компания <span>Магри</span> предоставляет обширный выбор<br>из товаров японских и
                                 европейских
                                 брендов, таких как : Lurefans, Garry Angler, Tiemco, Forest, Country Road, Valley hill,
-                                Trimm, Carson, Behr и Interfish.<br><br>У нас Вы можете приобрести все необходимое, а
+                                Trimm, Carson, Behr и Interfish.<br><br> У нас Вы можете приобрести все необходимое, а
                                 также получить профессиональную консультацию по снастям и туристическим товарам удобным
                                 для
                                 Вас способом.</p>
@@ -484,34 +503,28 @@
                         <a href="about.html" class="about__btn btn-outline">Узнать подробнее</a>
                     </div>
                     <div class="about__benefits">
-                        <div class="about__benefit">
-                            <div>
+                        <div class="about__benefit-wrapper">
+                            <div class="about__benefit about__benefit1">
                                 <h5>20 +</h5>
                                 <p>Лет на рынке</p>
                             </div>
-                        </div>
-                        <div class="about__benefit">
-                            <div>
-                                <h5>20 000 +</h5>
-                                <p>Наименований <br> товаров в каталоге</p>
-                            </div>
-                        </div>
-                        <div class="about__benefit">
-                            <div>
+                            <div class="about__benefit about__benefit2">
                                 <h5>Скидки</h5>
                                 <p>Удобная система <br> накопительных <br> и разовых скидок</p>
                             </div>
-                        </div>
-                        <div class="about__benefit">
-                            <div>
-                                <h5>Доставка по РФ</h5>
-                                <p>Доставим в любой регион РФ <br> удобной Вам транспортной <br> компанией</p>
-                            </div>
-                        </div>
-                        <div class="about__benefit">
-                            <div>
+                            <div class="about__benefit about__benefit3">
                                 <h5>Поддержка</h5>
                                 <p>Предоставим <br> профессиональную <br> консультацию по товарам</p>
+                            </div>
+                        </div>
+                        <div class="about__benefit-wrapper">
+                            <div class="about__benefit about__benefit4">
+                                <h5>20 000 +</h5>
+                                <p>Наименований <br> товаров в каталоге</p>
+                            </div>
+                            <div class="about__benefit about__benefit5">
+                                <h5>Доставка по РФ</h5>
+                                <p>Доставим в любой регион РФ <br> удобной Вам транспортной <br> компанией</p>
                             </div>
                         </div>
                     </div>
@@ -663,7 +676,7 @@
                 <h5 class="footer__nav-title">Навигация</h5>
                 <ul class="footer__nav-list">
                     <li class="footer__nav-item"><a href="about.html">О компании</a></li>
-                    <li class="footer__nav-item"><a href="cataloh.html">Каталог</a></li>
+                    <li class="footer__nav-item"><a href="catalog.html">Каталог</a></li>
                     <li class="footer__nav-item"><a href="#faq">FAQ</a></li>
                     <li class="footer__nav-item"><a href="about.html#">Видеогалерея</a></li>
                 </ul>
