--- a/app/pages/about.html
+++ b/app/pages/about.html
@@ -75,6 +75,7 @@
                         <div class="about__benefit">
                             <p>Удобная система накопительных и разовых скидок</p>
                         </div>
+                        <a class="about__btn-catalog btn-outline" href="catalog.html">Перейти к каталогу</a>
                     </div>
                 </div>
             </section>
