--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -79,47 +79,49 @@
                 </div>
             </section>
             <section class="mini-catalog">
-                <h3 class="mini-catalog__title container">Каталог</h3>
-                <ul class="mini-catalog__list container">
-                    <li><a class="mini-catalog__item" href="category.html">
-                            <h5>Удилища</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Катушки</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Воблеры</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Попперы</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Блесна</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Снасточки</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Балансиры</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Кормушки</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Кароповая программа</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Крючки</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Мухи, стримеры</h5>
-                        </a></li>
-                    <li><a class="mini-catalog__item" href="#">
-                            <h5>Раттлины, цикады</h5>
-                        </a></li>
-                </ul>
                 <div class="container">
-                    <a class="mini-catalog__btn btn" href="catalog.html"  id="faq">Перейти к каталогу</a>
+                    <h3 class="mini-catalog__title">Каталог</h3>
+                    <ul class="mini-catalog__list">
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Удилища</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Катушки</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Воблеры</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Попперы</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Блесна</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Снасточки</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Балансиры</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Кормушки</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Кароповая программа</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Крючки</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Мухи, стримеры</h5>
+                            </a></li>
+                        <li><a class="mini-catalog__item" href="category.html">
+                                <h5>Раттлины, цикады</h5>
+                            </a></li>
+                    </ul>
+                    <div>
+                        <a class="mini-catalog__btn btn" href="catalog.html" id="faq">Перейти к каталогу</a>
+                    </div>
                 </div>
             </section>
             <section class="faq container">
